fixed font weight on safari

--- a/angular_app_frontend/main.scss
+++ b/angular_app_frontend/main.scss
@@ -88,3 +88,7 @@ body {
 .no-scroll {
   overflow: hidden;
 }
+
+body {
+    -webkit-font-smoothing: subpixel-antialiased;
+}
